fixed colons on smallest ticker

--- a/front-end/src/styles/Ticker.css
+++ b/front-end/src/styles/Ticker.css
@@ -96,7 +96,7 @@
     }
 
     .ticker-separator {
-        padding-top: 20px;
+        padding-top: 30px;
         font-size: 2.5rem;
     }
 }
